--- a/shared.css
+++ b/shared.css
@@ -3,11 +3,17 @@ body {
   margin: 0;
 }
 
-ul {
-  list-style: none;
+header {
+  border: 1px solid green;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 60px;
 }
 
 #page-logo a {
+  border: 1px solid blue;
+  margin: 5rem;
   padding: 10px;
   font-family: "Oleo Script", sans-serif;
   color: rgb(245, 243, 160);
@@ -15,4 +21,14 @@ ul {
   text-decoration: none;
   text-transform: uppercase;
   text-shadow: 1px 1px 2px rgb(0, 0, 0);
+}
+
+header ul {
+  border: 1px solid blue;
+  display: flex;
+  gap: 32px;
+}
+
+header li {
+  margin-left: 20px;
 }
