--- a/zero.css
+++ b/zero.css
@@ -32,6 +32,11 @@ li {
   list-style: none;
 }
 
+/* Default anchor style is removed */
+a {
+  text-decoration: none;
+}
+
 /* Set core root defaults */
 html:focus-within {
   scroll-behavior: smooth;
