--- a/shared.css
+++ b/shared.css
@@ -1,22 +1,23 @@
 body {
   font-family: "Quicksand", sans-serif;
   margin: 0;
+  --main-color: rgb(255, 251, 0);
 }
 
 header {
-  border: 1px solid green;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 15px 60px;
+  position: absolute;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 #page-logo a {
-  border: 1px solid blue;
-  margin: 5rem;
   padding: 10px;
   font-family: "Oleo Script", sans-serif;
-  color: rgb(245, 243, 160);
+  color: var(--main-color);
   font-size: 50px;
   text-decoration: none;
   text-transform: uppercase;
@@ -24,11 +25,24 @@ header {
 }
 
 header ul {
-  border: 1px solid blue;
   display: flex;
   gap: 32px;
 }
 
 header li {
   margin-left: 20px;
+}
+
+header li a {
+  color: rgb(255, 251, 0);
+  font-weight: 700;
+  font-size: 1.5rem;
+  padding: 12px;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+}
+
+header li a:hover {
+  color: black;
+  background-color: rgb(255, 251, 0);
+  border-radius: 8px;
 }
