--- a/shared.css
+++ b/shared.css
@@ -46,3 +46,35 @@ header li a:hover {
   background-color: rgb(255, 251, 0);
   border-radius: 8px;
 }
+
+/* Footer stylings */
+footer {
+  background: linear-gradient(70deg, rgb(24, 24, 24), rgb(25, 29, 29));
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px 60px;
+}
+
+#courtesy p {
+  color: white;
+  font-size: 24px;
+}
+
+footer ul {
+  margin: 0px 0px;
+  padding: 0;
+  display: flex;
+  justify-content: flex-end;
+}
+
+footer li {
+  width: 40px;
+  height: 40px;
+  margin: 20px 20px;
+}
+
+footer img {
+  width: 100%;
+  height: 100%;
+}
