--- a/style.css
+++ b/style.css
@@ -46,3 +46,44 @@
 #hero-content a:hover {
   background-color: rgb(189, 188, 122);
 }
+
+#highlights {
+  padding: 24px;
+  background: linear-gradient(0deg, rgb(227, 255, 253), rgb(202, 243, 240));
+}
+
+#highlights h2 {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 40px;
+  color: rgb(59, 65, 64);
+  margin: 24px 0;
+}
+
+#destinations {
+  display: flex;
+  width: 90%;
+  margin: auto;
+  margin-bottom: 40px;
+  justify-content: center;
+  padding: 0;
+}
+
+.destination {
+  margin: 0 20px;
+}
+
+.destination p {
+  text-align: center;
+  font-size: 24px;
+  margin: 20px 0;
+}
+
+.destination img {
+  height: 200px;
+  width: 100%;
+  box-shadow: 2px 4px 8px rgb(68, 67, 67);
+  border-radius: 10px;
+  object-fit: cover;
+  margin-bottom: 10px;
+}
