--- a/css/shared.css
+++ b/css/shared.css
@@ -1,14 +1,15 @@
 body {
   font-family: "Quicksand", sans-serif;
   margin: 0;
-  --main-color: rgb(255, 251, 0);
+  --main-color: white;
+  --structure-padding: 8px 60px;
 }
 
 header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 15px 60px;
+  padding: var(--structure-padding);
   position: absolute;
   width: 100%;
   box-sizing: border-box;
@@ -34,7 +35,7 @@ header li {
 }
 
 header li a {
-  color: rgb(255, 251, 0);
+  color: var(--main-color);
   font-weight: 700;
   font-size: 1.5rem;
   padding: 12px;
@@ -43,7 +44,7 @@ header li a {
 
 header li a:hover {
   color: black;
-  background-color: rgb(255, 251, 0);
+  background-color: var(--main-color);
   border-radius: 8px;
 }
 
@@ -53,11 +54,11 @@ footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 8px 60px;
+  padding: var(--structure-padding);
 }
 
 #courtesy p {
-  color: white;
+  color: var(--main-color);
   font-size: 24px;
 }
 
