--- a/css/shared.css
+++ b/css/shared.css
@@ -79,3 +79,8 @@ footer img {
   width: 100%;
   height: 100%;
 }
+
+footer #github-link:hover {
+  text-decoration: underline;
+  font-weight: 900;
+}
